--- a/package.json
+++ b/package.json
@@ -4,31 +4,35 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
+    "prestart": "node jit-helper.js",
     "start": "ng serve",
+    "start:fr": "npm run start -- --i18nFormat xlf --locale fr --i18nFile src/locale/messages.fr.xlf",
+    "start:aot:fr": "npm run start:fr -- --aot",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "extract": "ng xi18n --outputPath src/locale"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.2.4",
-    "@angular/common": "^4.2.4",
-    "@angular/compiler": "^4.2.4",
-    "@angular/core": "^4.2.4",
-    "@angular/forms": "^4.2.4",
-    "@angular/http": "^4.2.4",
-    "@angular/platform-browser": "^4.2.4",
-    "@angular/platform-browser-dynamic": "^4.2.4",
-    "@angular/router": "^4.2.4",
+    "@angular/animations": "^5.0.0-rc.6",
+    "@angular/common": "^5.0.0-rc.6",
+    "@angular/compiler": "^5.0.0-rc.6",
+    "@angular/core": "^5.0.0-rc.6",
+    "@angular/forms": "^5.0.0-rc.6",
+    "@angular/http": "^5.0.0-rc.6",
+    "@angular/platform-browser": "^5.0.0-rc.6",
+    "@angular/platform-browser-dynamic": "^5.0.0-rc.6",
+    "@angular/router": "^5.0.0-rc.6",
     "core-js": "^2.4.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "1.5.0-rc.2",
-    "@angular/compiler-cli": "^4.2.4",
-    "@angular/language-service": "^4.2.4",
-    "typescript": "~2.3.3"
+    "@angular/compiler-cli": "^5.0.0-rc.6",
+    "@angular/language-service": "^5.0.0-rc.6",
+    "typescript": "~2.4.2"
   }
 }
