--- a/package.json
+++ b/package.json
@@ -16,23 +16,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0-rc.6",
-    "@angular/common": "^5.0.0-rc.6",
-    "@angular/compiler": "^5.0.0-rc.6",
-    "@angular/core": "^5.0.0-rc.6",
-    "@angular/forms": "^5.0.0-rc.6",
-    "@angular/http": "^5.0.0-rc.6",
-    "@angular/platform-browser": "^5.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "^5.0.0-rc.6",
-    "@angular/router": "^5.0.0-rc.6",
+    "@angular/animations": "^5.0.2",
+    "@angular/common": "^5.0.2",
+    "@angular/compiler": "^5.0.2",
+    "@angular/core": "^5.0.2",
+    "@angular/forms": "^5.0.2",
+    "@angular/http": "^5.0.2",
+    "@angular/platform-browser": "^5.0.2",
+    "@angular/platform-browser-dynamic": "^5.0.2",
+    "@angular/router": "^5.0.2",
     "core-js": "^2.4.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.0-rc.2",
-    "@angular/compiler-cli": "^5.0.0-rc.6",
-    "@angular/language-service": "^5.0.0-rc.6",
+    "@angular/cli": "1.5.3",
+    "@angular/compiler-cli": "^5.0.2",
+    "@angular/language-service": "^5.0.2",
     "typescript": "~2.4.2"
   }
 }
